made changes to the code

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Task</title>
-    <link rel="stylesheet" href="/css/task.css">
-    <link rel="stylesheet" href="/css/normalize .css">
+    <link rel="stylesheet" href="/css/index.css">
+    <link rel="stylesheet" href="/css/normalize.css">
     <link rel="stylesheet" href="/css/glide.core.min.css">
     <link rel="stylesheet" href="/css/glide.theme.css">
 </head>
@@ -23,7 +23,7 @@
     </header>
     <div class="seven__days__trial">
         <h3><span>FREE!!!</span> explore on flixia for a week</h3>
-        <a href="/html/register.html">
+        <a href="/register.html">
             <p>click here to register</p>
         </a>
     </div>
