--- a/login.html
+++ b/login.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Log in page</title>
-    <link rel="stylesheet" href="/css/log-in.css">
+    <link rel="stylesheet" href="/css/login.css">
     <link rel="stylesheet" href="/css/normalize .css">
 </head>
 
@@ -17,10 +17,10 @@
             <input type="email" class="text" placeholder="Email Address">
             <input type="password" class="text" placeholder="Password">
         </form>
-        <a href="/html/task.html" class="submit-btn">
+        <a href="/index.html" class="submit-btn">
             <h3>LOGIN</h3>
         </a>
-        <a class="sign_in" href="/html/register.html">
+        <a class="sign_in" href="/register.html">
             <h3>Create An Account</h3>
             <h3>Forgot Password?</h3>
         </a>
