--- a/register.html
+++ b/register.html
@@ -19,12 +19,12 @@
             <input type="password" class="text" placeholder="Password">
             <input type="password" class="text" placeholder="Confirm password">
         </form>
-        <a href="/html/task.html" class="submit-btn">
+        <a href="/index.html" class="submit-btn">
             <h3>Sign Up</h3>
         </a>
         <div class="sign_in">
             <h3>Already On Flixia?</h3>
-            <a href="/html/log-in.html">
+            <a href="/login.html">
                 <p>Log in</p>
             </a>
         </div>
