--- a/index.html
+++ b/index.html
@@ -14,18 +14,25 @@
 
 <body>
     <header>
-        <img id="image__collage" src="/images/image-collage-two.jpg" alt="">
+        <img class="image__collage" src="/images/image-collage-two - Copy.jpg" alt="">
+        <img class="image__collage__two" src="/images/image-collage-two.jpg" alt="">
         <nav>
-            <img class="logo" src="/images/logo.PNG" alt="">
+            <img class="logo-one" src="/images/logo.PNG" alt="">
             <input class="text" type="text" placeholder="Search for your favorite movies">
-            <img class="menu" src="/images/icon-hamburger.svg" alt="">
+            <a href="menu"><img class="menu" src="/images/icon-hamburger.svg" alt=""></a>
+            <div class="login_sign-up">
+                <a href="/login.html">Login</a>
+                <a href="/register.html"> Sign Up</a>
+            </div>
         </nav>
     </header>
-    <div class="seven__days__trial">
-        <h3><span>FREE!!!</span> explore on flixia for a week</h3>
-        <a href="/register.html">
-            <p>click here to register</p>
-        </a>
+    <div class="box">
+        <div class="seven__days__trial">
+            <h3><span>FREE!!!</span> explore on flixia for a week</h3>
+            <a href="/register.html">
+                <p>click here to register</p>
+            </a>
+        </div>
     </div>
     <div class="container">
         <div class="glide">
@@ -73,8 +80,13 @@
                     1200: {
                         perView: 3
                     },
-                    800: {
+                    900: {
                         perView: 2
+                    },
+                    650: {
+                        focusAt: 'center',
+                        gap: 10,
+                        perView: 1.8
                     }
                 }
             }).mount();
@@ -105,9 +117,8 @@
                 <img src="/images/tv.jpg" alt="">
             </div>
             <div class="comment">
-                <h3>Run into a new world of fantasy, comedy, action and so on, enjoying quality time with family, as
-                    <span>Flixia</span> made an exclusive list of movies for you
-                </h3>
+                <h3>Run into a new world of fantasy, comedy, action and so on, enjoying quality time with family on
+                    <span>Flixia</span>.</h3>
             </div>
         </div>
         <div class="devices">
@@ -120,9 +131,11 @@
             </div>
         </div>
     </div>
+
+    <!-- footer section -->
     <footer>
         <div class="first-footer">
-            <img class="logo" src="/images/logo.PNG" alt="">
+            <img class="logo-two" src="/images/logo.PNG" alt="">
             <div class="social-media">
                 <img class="icon" src="/images/icon-facebook.svg" alt="">
                 <img class="icon" src="/images/icon-pinterest.svg" alt="">
@@ -153,24 +166,8 @@
             <div class="go">Email Us</div>
         </div>
 
-        <p class="copyright">&copy;Copyright 2020. All Rights Reserved</p>
+        <p class="copyright">&copy;Copyright 2022 flixia. All Rights Reserved</p>
     </footer>
-</body>
-
-</html>
-
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-
-<body>
-
 </body>
 
 </html>
