added some styles to css

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <nav>
             <img class="logo-one" src="/images/logo.PNG" alt="">
             <input class="text" type="text" placeholder="Search for your favorite movies">
-            <a href="menu"><img class="menu" src="/images/icon-hamburger.svg" alt=""></a>
+            <img class="menu" src="/images/icon-hamburger.svg" alt="">
             <div class="login_sign-up">
                 <a href="/login.html">Login</a>
                 <a href="/register.html"> Sign Up</a>
@@ -181,7 +181,7 @@
 
         <div class="third-footer">
             <input class="third-footer__text" type="email" placeholder="give us your feedbacks">
-            <div class="go">
+            <div class="email_us_btn">
                 <p>Email Us</p>
             </div>
         </div>
