--- a/login.html
+++ b/login.html
@@ -5,25 +5,28 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Log in page</title>
+    <title>Login page</title>
     <link rel="stylesheet" href="/css/login.css">
     <link rel="stylesheet" href="/css/normalize .css">
 </head>
 
 <body>
+    <img class="bg_image" src="/images/the-chosen.jpg" alt="">
     <div class="container">
-        <h2>Welcome <br> Back!</h2>
-        <form>
-            <input type="email" class="text" placeholder="Email Address">
-            <input type="password" class="text" placeholder="Password">
-        </form>
-        <a href="/index.html" class="submit-btn">
-            <h3>LOGIN</h3>
-        </a>
-        <a class="sign_in" href="/register.html">
-            <h3>Create An Account</h3>
-            <h3>Forgot Password?</h3>
-        </a>
+        <div class="box">
+            <h2>Welcome Back!</h2>
+            <form>
+                <input type="email" class="text" placeholder="Email Address">
+                <input type="password" class="text" placeholder="Password">
+            </form>
+            <a href="/index.html" class="submit_btn">
+                <h3>LOGIN</h3>
+            </a>
+            <a class="sign_in" href="/register.html">
+                <h3>Create An Account</h3>
+                <h3>Forgot Password?</h3>
+            </a>
+        </div>
     </div>
 </body>
 
