--- a/register.html
+++ b/register.html
@@ -11,22 +11,25 @@
 </head>
 
 <body>
+    <img class="bg_image" src="/images/the-pirates.jpg" alt="">
     <div class="container">
-        <img class="logo" src="/images/logo.PNG" alt="">
-        <form>
-            <input type="text" class="text" placeholder="Full Name">
-            <input type="email" class="text" placeholder="Email Address">
-            <input type="password" class="text" placeholder="Password">
-            <input type="password" class="text" placeholder="Confirm password">
-        </form>
-        <a href="/index.html" class="submit-btn">
-            <h3>Sign Up</h3>
-        </a>
-        <div class="sign_in">
-            <h3>Already On Flixia?</h3>
-            <a href="/login.html">
-                <p>Log in</p>
+        <div class="box">
+            <img class="logo" src="/images/logo.PNG" alt="">
+            <form>
+                <input type="text" class="text" placeholder="Full Name">
+                <input type="email" class="text" placeholder="Email Address">
+                <input type="password" class="text" placeholder="Password">
+                <input type="password" class="text" placeholder="Confirm password">
+            </form>
+            <a href="/index.html" class="submit_btn">
+                <h3>Sign Up</h3>
             </a>
+            <div class="sign_in">
+                <h3>Already On Flixia?</h3>
+                <a href="/login.html">
+                    <h3>Log in</h3>
+                </a>
+            </div>
         </div>
     </div>
 </body>
