added new styles on css

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                         gap: 10,
                         perView: 1.8
                     },
-                    355: {
+                    375: {
                         perView: 1,
                         gap: 5
                     }
@@ -180,7 +180,7 @@
         </div>
 
         <div class="third-footer">
-            <input class="third-footer__text" type="email" placeholder="give us your feedbacks">
+            <input class="third_footer_input" type="email" placeholder="give us your feedbacks">
             <div class="email_us_btn">
                 <p>Email Us</p>
             </div>
