--- a/register.html
+++ b/register.html
@@ -13,23 +13,20 @@
 <body>
     <img class="bg_image" src="/images/the-pirates.jpg" alt="">
     <div class="container">
-        <div class="box">
-            <img class="logo" src="/images/logo.PNG" alt="">
-            <form>
-                <input type="text" class="text" placeholder="Full Name">
-                <input type="email" class="text" placeholder="Email Address">
-                <input type="password" class="text" placeholder="Password">
-                <input type="password" class="text" placeholder="Confirm password">
-            </form>
-            <a href="/index.html" class="submit_btn">
-                <h3>Sign Up</h3>
+        <div class="bg_color"></div>
+        <img class="logo" src="/images/logo.PNG" alt="">
+        <form>
+            <input type="text" class="input" placeholder="Full Name" autofocus required>
+            <input type="email" class="input" placeholder="Email Address" required>
+            <input type="password" class="input" placeholder="Password" required>
+            <input type="password" class="input" placeholder="Confirm password" required>
+            <button type="submit">Register</button>
+        </form>
+        <div class="sign_in">
+            <h3>Already On Flixia?</h3>
+            <a href="/login.html">
+                <span>Log in</span>
             </a>
-            <div class="sign_in">
-                <h3>Already On Flixia?</h3>
-                <a href="/login.html">
-                    <h3>Log in</h3>
-                </a>
-            </div>
         </div>
     </div>
 </body>
