--- a/index.html
+++ b/index.html
@@ -16,10 +16,29 @@
     <header>
         <img class="image__collage" src="/images/image-collage-two - Copy.jpg" alt="">
         <img class="image__collage__two" src="/images/image-collage-two.jpg" alt="">
+        <div id="menu">
+            <ul>
+                <li>
+                    <a href="#">Home</a>
+                </li>
+                <li>
+                    <a href="#">About</a>
+                </li>
+                <li>
+                    <a href="#">FAQs</a>
+                </li>
+                <li>
+                    <a href="/login.html">Login</a>
+                </li>
+                <li>
+                    <a href="/register.html">Register</a>
+                </li>
+            </ul>
+        </div>
         <nav>
             <img class="logo-one" src="/images/logo.PNG" alt="">
             <input class="text" type="text" placeholder="Search for your favorite movies">
-            <img class="menu" src="/images/icon-hamburger.svg" alt="">
+            <img class="hamburger_icon" onclick="show_hide()" src="/images/icon-hamburger.svg" alt="">
             <div class="login_sign-up">
                 <a href="/login.html">Login</a>
                 <a href="/register.html"> Sign Up</a>
@@ -98,6 +117,17 @@
                     }
                 }
             }).mount();
+
+            var a;
+            function show_hide() {
+                if (a == 1) {
+                    document.getElementById("menu").style.display = "inline";
+                    return (a = 0);
+                } else {
+                    document.getElementById("menu").style.display = "none";
+                    return (a = 1);
+                }
+            }
         </script>
     </div>
     <div class="main">
