--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
                     <a href="#">FAQs</a>
                 </li>
                 <li>
-                    <a href="/login.html">Login</a>
+                    <a href="/login.html"><span>Login</span></a>
                 </li>
                 <li>
-                    <a href="/register.html">Register</a>
+                    <a href="/register.html"><span>Register</span></a>
                 </li>
             </ul>
         </div>
@@ -107,12 +107,10 @@
                         perView: 2
                     },
                     650: {
-                        focusAt: 'center',
-                        gap: 10,
-                        perView: 1.8
+                        perView: 1.6
                     },
                     375: {
-                        perView: 1,
+                        perView: 0.95,
                         gap: 5
                     }
                 }
@@ -121,10 +119,10 @@
             var a;
             function show_hide() {
                 if (a == 1) {
-                    document.getElementById("menu").style.display = "inline";
+                    document.getElementById("menu").style.display = "none";
                     return (a = 0);
                 } else {
-                    document.getElementById("menu").style.display = "none";
+                    document.getElementById("menu").style.display = "inline";
                     return (a = 1);
                 }
             }
