--- a/login.html
+++ b/login.html
@@ -15,15 +15,19 @@
     <div class="container">
         <div class="bg_color"></div>
         <h2>Welcome Back!</h2>
-        <form action="http://127.0.0.1:5500/index.html" method="POST">
+        <form>
             <input type="email" class="input" placeholder="Email Address" name="email" required autofocus>
             <input type="password" class="input" placeholder="Password" name="password" required>
-            <button type="submit">Login</button>
+            <a class="login_btn" href="/index.html">
+                <h3>Login</h3>
+            </a>
         </form>
-        <a class="sign_in" href="/register.html">
+        <div class="sign_in">
             <h3>Create An Account</h3>
-            <h3>Forgot Password?</h3>
-        </a>
+            <a href="/register.html">
+                <h3>Forgot Password?</h3>
+            </a>
+        </div>
     </div>
 </body>
 
