added some codes

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 
 <body>
     <header>
-        <img class="image__collage" src="/images/image-collage-two - Copy.jpg" alt="">
-        <img class="image__collage__two" src="/images/image-collage-two.jpg" alt="">
+        <img class="image__collage" src="/images/PSX_20221030_002223.jpg" alt="">
+        <img class="image__collage__two" src="/images/PSX_20221030_002118.jpg" alt="">
         <div id="menu">
             <ul>
                 <li>
@@ -208,10 +208,10 @@
         </div>
 
         <div class="third-footer">
-            <input class="third_footer_input" type="email" placeholder="give us your feedbacks">
-            <div class="email_us_btn">
-                <p>Email Us</p>
-            </div>
+            <form action="https://formspree.io/f/mqkjynnb" method="post">
+                <input class="third_footer_input" type="email" placeholder="give us your feedbacks">
+                <button type="submit">Email Us</button>
+            </form>
         </div>
 
         <p class="copyright">&copy;Copyright 2022 flixia. All Rights Reserved</p>
