added name to a form

--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
 
         <div class="third-footer">
             <form action="https://formspree.io/f/mqkjynnb" method="post">
-                <input class="third_footer_input" type="email" placeholder="give us your feedbacks">
+                <input class="third_footer_input" type="email" placeholder="give us your feedbacks" name="email">
                 <button type="submit">Email Us</button>
             </form>
         </div>
